# CPU-M

./: README.md  components.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: auto-release.yml  build.yml  (+1 more)
scripts/: bump-version.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/models/: apps.rs  battery.rs  cpu.rs  display.rs  gpu.rs  license.rs  mainboard.rs  memory.rs  mod.rs  network.rs  platform.rs  report.rs  security.rs  sensors.rs  storage.rs  system.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/services/: mod.rs
src-tauri/src/services/apps/: macos.rs  mod.rs  windows.rs
src-tauri/src/services/battery/: macos.rs  mod.rs  windows.rs
src-tauri/src/services/cpu/: macos.rs  mod.rs  windows.rs
src-tauri/src/services/display/: macos.rs  mod.rs  windows.rs
src-tauri/src/services/gpu/: macos.rs  mod.rs  windows.rs
src-tauri/src/services/license/: macos.rs  mod.rs  windows.rs
src-tauri/src/services/mainboard/: macos.rs  mod.rs  windows.rs
src-tauri/src/services/memory/: macos.rs  mod.rs  windows.rs
src-tauri/src/services/network/: macos.rs  mod.rs  windows.rs
src-tauri/src/services/report/: mod.rs
src-tauri/src/services/security/: macos.rs  mod.rs  windows.rs
src-tauri/src/services/sensors/: macos.rs  mod.rs  windows.rs
src-tauri/src/services/storage/: macos.rs  mod.rs  windows.rs
src-tauri/src/services/system/: macos.rs  mod.rs  windows.rs
src-tauri/src/util/: mod.rs
(+76 files in other folders)
