[package]
name = "cpu-m"
version = "0.1.0"
description = "Detailed system information for Windows and macOS"
authors = ["Mede"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cpu_m_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.38"
starship-battery = "0.10"

[target.'cfg(windows)'.dependencies]
wmi = "0.17"
winreg = "0.55"
windows = { version = "0.62", features = [
    "Win32_System_SystemInformation",
    "Win32_Graphics_Dxgi",
    "Win32_Foundation",
    "Win32_UI_Shell",
] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
plist = "1"
